--- a/docker_app/.env
+++ b/docker_app/.env
@@ -1,4 +1,3 @@
 USERS_ENDPOINT=http://18.191.208.8:3050/jugadores/
 DADO_ENDPOINT=http://34.70.148.27:3000/tirar/
- 
- 
+TORNEOS_ENDPOINT=http://34.70.148.27:9000/partidas/
