--- a/docker_app/.env
+++ b/docker_app/.env
@@ -1,3 +1,6 @@
 USERS_ENDPOINT=http://18.191.208.8:3050/jugadores/
-DADO_ENDPOINT=http://34.70.148.27:3000/tirar/
+DADO_ENDPOINT=http://34.70.148.27:3000/tirar/3
+JWT_ENDPOINT=http://34.70.148.27:8081/
 TORNEOS_ENDPOINT=http://34.70.148.27:9000/partidas/
+ID_TOKENDADO=1
+LLAVE_TOKENDADO=fF7fCg6C
